1.3.0 unreleased
================

 * Moved interface declarations from ZCML to the classes themselves.
   [hannosch]

 * Fix Unicode encode error in formatCatalogMetadata.py when atct_topic_view.py
   uses it to display in a table a text field (like 'location') whose contents
   can't be encoded to ascii.
   http://dev.plone.org/plone/ticket/7237
   [stevem]

 * Adjusted tests to new Archetypes policy on return values.
   [hannosch]

 * Ported editing.txt, events.txt, reindex_sanity.txt and traversal.txt tests
   from Archetypes and adjusted them for the ATContentTypes specific behavior.
   [hannosch]

 * Adjusted tests to changed test base classes of Archetypes.
   [hannosch]

 * Removed the unmaintained utilities folder including the report scripts.
   [hannosch]

 * Moved old_folder_contents over from CMFPlone as it is still used in
   atct_topic_subtopics.pt.
   [hannosch]

 * Reorder ATDateCriteria schema fields => more intuitive for users.
   [zegor]

 * Forwarded fix for http://dev.plone.org/collective/changeset/51803: the
   validation layer for the 'id' field wasn't being initialized. Closes
   http://dev.plone.org/plone/ticket/7221
   [deo]

1.2.0-final 2007-08-16
======================

 * No longer enforce vocabularies on constraintypes fields, it's essentially
   pointless, and not enforcing them helps workaround a strange bug:
   http://dev.plone.org/plone/ticket/6734
   [alecm]

 * Fixed i18n markup for event date validation error messages.
   [hannosch]

 * Only show related items once instead of twice.
   [wichert]

1.2.0-rc2 2007-06-11
====================

 * Add link validation to event field.
   [alecm]

1.2.0-rc1 2007-06-08
====================

 * Fix concatenation issues between related items and query results in Topics.
   [alecm]

 * Fixed migration bug in the atct tool migration. This closes
   http://dev.plone.org/plone/ticket/6549 and
   http://dev.plone.org/plone/ticket/6550.
   [hannosch]
